@@ -1,3 +1,11 @@
+2000-12-06  Katsumi Yamaoka <yamaoka@jpl.org>
+
+	* lisp/nnshimbun.el (TopLevel): Defalias `coding-system-category'
+	to `get-code-mnemonic' for Mule.
+	(TopLevel): Make codesys `euc-japan' and `shift_jis' for Mule.
+	(nnshimbun-type-definition): Use `static-if' to determine codesys.
+	(TopLevel): Require `static'.
+
 2000-12-06  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>
 
 	* lisp/nnshimbun.el (nnshimbun-retrieve-url): coding detection is
